--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "raw-loader": "^4.0.2",
     "sass": "^1.64.1",
     "start-server-and-test": "^2.0.0",
-    "vite": "^4.4.6"
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.4.6",
+    "vite-plugin-inspect": "^0.7.35"
   },
   "browserslist": [
     "> 1%",
